[metadata]
name =TrieCLI
version=0.0.2
author=Nalin Nagar
author_email=nalinnagar1@gmail.com
description=A command line interface implmenting the trie data structure
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/NNDEV1/TrieCLI
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    requests
    flask
    pyfiglet

